opt env file usage

--- a/.env-default
+++ b/.env-default
@@ -1,5 +1,6 @@
 BOT_TOKEN='YOUR_BOT_TOKEN'
 BOT_ADMIN_ID='YOUR_TELEGRAM_ID'
+OPENAI_API_KEY='YOUR_OPENAI_APIKEY'
 # Uptime Kuma monitoring tool url
 KUMA_PUSH_URL=''
 WEB_DOMAIN=''
